--- a/index.html
+++ b/index.html
@@ -7,30 +7,14 @@
     <!-- Not present in the tutorial. Just for basic styling. -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="become-better.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/392/Chart.min.js"></script>
 </head>
 <body>
-  <select name="" id="mySelect" class="search">
-    <!-- <option value="tgp">tgp</option>
-    <option value="fc">fc</option> -->
-    <option value="asc">asc</option>
-    <option value="desc">desc</option>
-  </select>
-  <div id="wrapper">
-    <ul class="list">
-      <li class="item">
-        <span class="gameProvider title" data-game-provider="tgp">a</span>
-      </li>
-      <li class="item">
-        <span class="gameProvider title" data-game-provider="fc">b</span>
-      </li>
-      <li class="item">
-        <span class="gameProvider title" data-game-provider="tgp">日</span>
-      </li>
-      <li class="item">
-        <span class="gameProvider title" data-game-provider="fc">目</span>
-      </li>
-    </ul>
+  <!-- Radar Chart -->
+  <div class="chart-demo">
+    <h2 class="title">Radar Chart</h2>
+    <canvas id="radarChart" width="640" height="400"></canvas>
   </div>
+  <script src="become-better.js"></script>
 </body>
 </html>
