add browserfy to support import on clinet side

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Not present in the tutorial. Just for basic styling. -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/392/Chart.min.js"></script>
+    <!-- <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/392/Chart.min.js"></script> -->
 </head>
 <body>
   <!-- Radar Chart -->
@@ -15,6 +15,7 @@
     <h2 class="title">Radar Chart</h2>
     <canvas id="radarChart" width="640" height="400"></canvas>
   </div>
-  <script src="become-better.js"></script>
+  <!-- <script src="become-better.js"></script> -->
+  <script src="bundle.js"></script>
 </body>
 </html>
