--- a/index.html
+++ b/index.html
@@ -1,30 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-    <title>React Tutorial</title>
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <!-- Not present in the tutorial. Just for basic styling. -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <!-- <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/392/Chart.min.js"></script> -->
-</head>
-<body>
-  <div id="wrap">
-    <div class="item item-0">&nbsp;</div>
-    <div class="item item-1">&nbsp;</div>
-    <div class="item item-2">&nbsp;</div>
-    <div class="item item-3">&nbsp;</div>
-    <div class="item item-4">&nbsp;</div>
-    <div class="item item-5">&nbsp;</div>
-    <div class="item item-6">&nbsp;</div>
-    <div class="item item-7">&nbsp;</div>
-    <div class="item item-8">&nbsp;</div>
-    <div class="item item-9">&nbsp;</div>
-    <div class="item item-10">&nbsp;</div>
-    <div class="item item-11">&nbsp;</div>
-  </div>
-  <script src="bundle.js"></script>
-</body>
+<html>
+  <head>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+  </head>
+  <body>
+    <div class="container"></div>
+  </body>
+  <script src="/bundle.js"></script>
 </html>
