clean dev environment

--- a/index.html
+++ b/index.html
@@ -11,20 +11,7 @@
     <!-- <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/392/Chart.min.js"></script> -->
 </head>
 <body>
-  <div id="wrap">
-    <div class="item item-0">&nbsp;</div>
-    <div class="item item-1">&nbsp;</div>
-    <div class="item item-2">&nbsp;</div>
-    <div class="item item-3">&nbsp;</div>
-    <div class="item item-4">&nbsp;</div>
-    <div class="item item-5">&nbsp;</div>
-    <div class="item item-6">&nbsp;</div>
-    <div class="item item-7">&nbsp;</div>
-    <div class="item item-8">&nbsp;</div>
-    <div class="item item-9">&nbsp;</div>
-    <div class="item item-10">&nbsp;</div>
-    <div class="item item-11">&nbsp;</div>
-  </div>
+  Gulp Development Env
   <script src="bundle.js"></script>
 </body>
 </html>
